updating css stying

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,8 @@
 li {
   padding: 5px;
   margin: 5px;
-  background: #faebd7;
+  	color:#737373;
+  background: white;
 }
 
 .label {
@@ -16,4 +17,32 @@ li {
 
 .form-group {
   margin-bottom: 5px;
+}
+
+
+body
+{
+	background-color: #eeeeee;
+
+}
+h1
+{
+	color:#fc3e44;
+	font-family: 'Noto Serif', serif;
+	text-shadow: 2px 2px 4px #000000;
+}
+h2
+{
+	background-color: #cdeaf3;
+	color:#212629;
+	text-shadow: 1px 1px #46b8db;
+}
+
+button
+{
+	background-color: #cdeaf3;
+	color:#46b8db;
+	 border: 1px solid;
+    padding: 2px;
+    box-shadow: 1px 2px 3px #888888;
 }
