--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<!--google font-->
+	<link href="https://fonts.googleapis.com/css?family=Noto+Serif:700" rel="stylesheet">
+	<!--css styling -->
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 		<title>MVC With Burgers!!</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
