--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,10 +5,10 @@
 	<!--google font-->
 	<link href="https://fonts.googleapis.com/css?family=Noto+Serif:700" rel="stylesheet">
 	<!--css styling -->
-		<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 		<title>MVC With Burgers!!</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="assets/js/burgers.js"></script>
+		<script src="/assets/js/burgers.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
