--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,7 +34,7 @@
   <div class="form-group">
     <label for="devoured">devoured?</label><br>
     <input type="radio" name="devoured" value="1" checked> devoured!<br>
-    <input type="radio" name="devoured" value="0"> eaten
+    <input type="radio" name="devoured" value="0"> Not eaten
   </div>
 
   <button type="submit">Add burger</button>
