--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,7 +33,7 @@
 
   <div class="form-group">
     <label for="devoured">devoured?</label><br>
-    <input type="radio" name="devoured" value="1" checked> devoured!<br>
+    <!-- <input type="radio" name="devoured" value="1" checked> devoured!<br> -->
     <input type="radio" name="devoured" value="0"> Not eaten
   </div>
 
