--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,9 +5,11 @@
 	<!--google font-->
 	<link href="https://fonts.googleapis.com/css?family=Noto+Serif:700" rel="stylesheet">
 	<!--css styling -->
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-		<title>MVC With Burgers!!</title>
+	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		<title>BURGER BITES!!</title>
+		<!--jquery-->
 		<script src="https://code.jquery.com/jquery.js"></script>
+		<!-- our burger.js -->
 		<script src="/assets/js/burgers.js"></script>
 	</head>
 	<body>
