--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<!--google font-->
 	<link href="https://fonts.googleapis.com/css?family=Noto+Serif:700" rel="stylesheet">
+	<!--bootstrap-->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<!--css styling -->
 	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 		<title>BURGER BITES!!</title>
@@ -13,6 +15,7 @@
 		<script src="/assets/js/burgers.js"></script>
 	</head>
 	<body>
+		
 		{{{ body }}}
 	</body>
 </html>
