--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,57 @@
-<h1>BURGER BITES!!</h1>
+<div class="container">
 
-<h2>Burgers that are not devoured (..OR HAS NO BITES)!</h2>
-<ul> 
-  {{#each burger}}
-    {{#unless devoured}}
-      {{> burgers/burgers-block eaten=true}}
-    {{/unless}}
-  {{/each}}
-</ul>
 
-<h2>#CHOMP!! Burgers that are devoured!</h2>
+  <h1>BURGER BITES!!</h1>
+<div class="row">
+<div class="col-md-8">
+  <h2>Burgers left (..OR HAS NO BITES)!</h2>
+  <ul> 
+    {{#each burger}}
+      {{#unless devoured}}
+        {{> burgers/burgers-block eaten=true}}
+      {{/unless}}
+    {{/each}}
+  </ul>
 
-<ul>  
-  {{#each burger}}
-    {{#if devoured}}
-      {{> burgers/burgers-block eaten=false}}
-    {{/if}}
-  {{/each}}
-</ul>
 
-<h2>Add a burger</h2>
-<form class="create-form">
 
-  <div class="form-group">
-    <label for="ca">burger Name:</label>
-    <input type="text" id="ca" name="name">
+  <h2>#CHOMP!! Burgers that are devoured!</h2>
+
+  <ul>  
+    {{#each burger}}
+      {{#if devoured}}
+        {{> burgers/burgers-block eaten=false}}
+      {{/if}}
+    {{/each}}
+  </ul>
+</div>
+
+
+<div clas="col-md-4">
+  <h2>Add a burger</h2>
+  <img src="/assets/img/burger.gif" id="burgerImg"  id="cute_burger">
+
+  <form class="create-form">
+
+    <div class="form-group">
+      <label for="ca">burger Name:</label>
+      <input type="text" id="ca" name="name">
+    </div>
+
+    <div class="form-group">
+      <label for="devoured">devoured?</label><br>
+      <!-- <input type="radio" name="devoured" value="1" checked> devoured!<br> -->
+      <input type="radio" name="devoured" value="0"> Not eaten
+    </div> 
+    <button type="submit">Add burger</button>
+
+
+    
+  </form>
+
+</div>
+
   </div>
 
-  <div class="form-group">
-    <label for="devoured">devoured?</label><br>
-    <!-- <input type="radio" name="devoured" value="1" checked> devoured!<br> -->
-    <input type="radio" name="devoured" value="0"> Not eaten
-  </div>
 
-  <button type="submit">Add burger</button>
-</form>
-
+</div>
