updated text on submission area

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -35,12 +35,12 @@
   <form class="create-form">
 
     <div class="form-group">
-      <label for="ca">burger Name:</label>
+      <label for="ca">Burger Name:</label>
       <input type="text" id="ca" name="name">
     </div>
 
     <div class="form-group">
-      <label for="devoured">devoured?</label><br>
+      <label for="devoured">Devoured?</label><br>
       <!-- <input type="radio" name="devoured" value="1" checked> devoured!<br> -->
       <input type="radio" name="devoured" value="0"> Not eaten
     </div> 
